tests/reference/asr-template_error_04-16c03e5.stderr
syntax error: Token 'requires' (of type 'identifier') is unexpected here
  --> tests/errors/template_error_04.f90:15:9
   |
15 |         requires R(T, F)
   |         ^^^^^^^^ 
